--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Server</h1>  
-    </main>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>CarService</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.3cb9b0c3a6990e98.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.3cb9b0c3a6990e98.css"></noscript></head>
+<body>
+  <app-root></app-root>
+<script src="runtime.b7e2649e97bebd9a.js" type="module"></script><script src="polyfills.02f78df4364d52b7.js" type="module"></script><script src="main.787ad639cf6cff3d.js" type="module"></script>
+
+</body></html>
